# TemplateRender

./: .gitignore  CMakeLists.txt  LICENSE  README.md
TemplateRender/: AppStart.cpp
TemplateRender/BL/: IfStatement.cpp  IfStatement.h  LoopStatement.cpp  Parser.cpp
TemplateRender/Config/: Config.cpp  Config.h
TemplateRender/Render/: TemplateRender.cpp
TemplateRender/Tests/: Tests.h
TemplateRender/Utils/: RenderError.cpp  RenderError.h
TemplateRender/src/bl/: HTML.cpp  IfStatement.cpp  LoopStatement.cpp  Parameters.cpp  Parser.cpp
TemplateRender/src/config/: Config.cpp
TemplateRender/src/context/: Context.cpp
TemplateRender/src/include/: Config.h  Context.h  Defines.h  Header.h  IfStatement.h  LoopStatement.h  Parameters.h  Parser.h  Regex.h  RenderError.h  TemplateRender.h
TemplateRender/src/render/: TemplateRender.cpp
TemplateRender/src/utils/: RenderError.cpp
TemplateRender/test/: Tests.h
